// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeaderAlert is rendered 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="ouiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentSpaceBetween ouiFlexGroup--directionRow ouiFlexGroup--responsive"
  >
    <div
      class="ouiFlexItem"
    >
      <div
        class="ouiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="ouiHeaderAlert__title"
    id="generated-id-title"
  >
    title
  </h3>
  <div
    class="ouiHeaderAlert__text"
  />
</article>
`;

exports[`OuiHeaderAlert renders action 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="ouiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentSpaceBetween ouiFlexGroup--directionRow ouiFlexGroup--responsive"
  >
    <div
      class="ouiFlexItem"
    >
      <div
        class="ouiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="ouiHeaderAlert__title"
    id="generated-id-title"
  >
    title
  </h3>
  <div
    class="ouiHeaderAlert__text"
  />
  <div
    class="ouiHeaderAlert__action ouiLink"
  >
    <button>
      Quietly take to the ship
    </button>
  </div>
</article>
`;

exports[`OuiHeaderAlert renders date as an element 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="ouiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentSpaceBetween ouiFlexGroup--directionRow ouiFlexGroup--responsive"
  >
    <div
      class="ouiFlexItem"
    >
      <div
        class="ouiHeaderAlert__date"
      >
        <h2>
          October 18, 1851
        </h2>
      </div>
    </div>
  </div>
  <h3
    class="ouiHeaderAlert__title"
    id="generated-id-title"
  >
    shazm
  </h3>
  <div
    class="ouiHeaderAlert__text"
  />
</article>
`;

exports[`OuiHeaderAlert renders title as an element 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="ouiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentSpaceBetween ouiFlexGroup--directionRow ouiFlexGroup--responsive"
  >
    <div
      class="ouiFlexItem"
    >
      <div
        class="ouiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="ouiHeaderAlert__title"
    id="generated-id-title"
  />
  <h2>
    Circumambulate the city
  </h2>
  <div
    class="ouiHeaderAlert__text"
  />
</article>
`;
